# STD_cmake-init-header-onlyPure_leo

./: README.md
cmake-init-header-onlyPure/: CMakeLists.txt
headeronly_Windows-10.0.19042_install/share/headeronly/: headeronlyTargets.cmake
spng_external_app/: CMakeLists.txt  mymathApp.cc
